# Nexus

./: .clang-format  .gitignore  CMakeLists.txt  License  README.md  build.sh  install_dependencies.sh
examples/: sample.cpp  sample.go  sample.py  sample.xml  simple.xml
include/: code_folding.h  main_window.h  plugin_manager.h  settings_manager.h  translator.h  xml_node.h  xml_serializer.h  xml_validator.h
include/core/: cpp_parser.h  go_parser.h  python_parser.h  xml_node.h  xml_parser.h  xml_serializer.h
include/syntax/: cpp_highlighter.h  go_highlighter.h  markdown_highlighter.h  python_highlighter.h  xml_highlighter.h
include/ui/: code_folding.h  function_graph_view.h  main_window.h  search_dialog.h
scripts/: build.py  demo_serialization.py  install_dependencies.py  run_tests.py
src/: main_window.cpp  xml_highlighter.cpp  xml_parser.cpp  xml_serializer.cpp
src/app/: main.cpp
src/core/: cpp_parser.cpp  go_parser.cpp  python_parser.cpp  xml_node.cpp  xml_parser.cpp  xml_serializer.cpp
src/syntax/: cpp_highlighter.cpp  go_highlighter.cpp  markdown_highlighter.cpp  python_highlighter.cpp  xml_highlighter.cpp
src/ui/: code_folding.cpp  function_graph_view.cpp  main_window.cpp  search_dialog.cpp
test/: code_folding_test.cpp  main.cpp  search_test.cpp  xml_parser_test.cpp  xml_serializer_test.cpp
